# xr-tui

./: .bumpversion.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml
xr_tui/: cli.py  hdf_reader.py  pandas_reader.py  plotting.py  xr-tui.tcss
