[project]
name = "xr-tui"
version = "2025.0.0"
requires-python = ">=3.9"
authors = [
]
maintainers = [
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
    "scipy>=1.13.1",
    "textual>=6.7.1",
    "textual-plotext>=1.0.1",
    "xarray>=2024.7.0",
    "zarr>=2.18.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xr_tui*"]

[tool.ruff]
exclude = [".venv"]

[project.scripts]
xr = "xr_tui.cli:main"
