[project]
name = "xr-tui"
version = "2025.0.0"
requires-python = ">=3.9"
authors = [
]
maintainers = [
]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
    "fsspec[s3]>=2025.10.0",
    "scipy>=1.13.1",
    "textual>=6.7.1",
    "textual-plotext>=1.0.1",
    "textual-slider>=0.2.0",
    "xarray[io]>=2024.7.0",
    "zarr>=2.18.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xr_tui*"]

[tool.setuptools.package-data]
xr_tui = ["*.tcss"]

[tool.ruff]
exclude = [".venv"]

[dependency-groups]
dev = [
    "pylint>=3.3.9",
    "ruff>=0.14.8",
    "textual-dev>=1.8.0",
]

[project.scripts]
xr = "xr_tui.cli:main"
