[project]
name = "xr-tui"
version = "0.1.0"
requires-python = ">=3.11"
description = "A Textual User Interface (TUI) for exploring xarray Datasets."
license = { text = "MIT" }

authors = [
    { name = "Samuel Jackson", email = "samuel.jackson@outlook.com" },
    { name = "Joel Adams", email = "joel.adams@york.ac.uk" },
]

maintainers = [
    { name = "Samuel Jackson", email = "samuel.jackson@outlook.com" },
]

readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]

dependencies = [
    "fsspec[s3]>=2025.10.0",
    "h5py>=3.15.1",
    "scipy>=1.13.1",
    "textual>=6.7.1",
    "textual-plotext>=1.0.1",
    "textual-slider>=0.2.0",
    "xarray[io]>=2024.7.0",
    "zarr>=2.18.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xr_tui*"]

[tool.setuptools.package-data]
xr_tui = ["*.tcss"]

[tool.ruff]
exclude = [".venv"]

[tool.pylint.design]
max-attributes = 10

[dependency-groups]
dev = [
    "bump-my-version>=1.2.4",
    "pylint>=3.3.9",
    "ruff>=0.14.8",
    "textual-dev>=1.8.0",
    "ty>=0.0.12",
]

[project.scripts]
xr = "xr_tui.cli:main"
